syntax = "proto3";
package users;

option csharp_namespace = "Users.Kafka.Contracts";

import "google/protobuf/timestamp.proto";

message UserEventKey {
  int64 user_id = 1;
}

message UserEventValue {
  
  oneof event {
    UserCreated user_created = 1;
    UserBlocked user_blocked = 2;
    UserUnblocked user_unblocked = 3;
  }

  message UserCreated {
    int64 user_id = 1;
    google.protobuf.Timestamp created_at = 2;
  }
  
  message UserBlocked {
    int64 user_id = 1;
    google.protobuf.Timestamp blocked_at = 2;
  }
  
  message UserUnblocked {
    int64 user_id = 1;
    google.protobuf.Timestamp unblocked_at = 2;
  }
}